--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,15 +3,19 @@
  * Code licensed under the Apache License v2.0.
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
-
+html{
+    position: relative;
+    min-height: 100vh;
+}
 body {
     font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
     /*background: url('../img/bg.jpg') no-repeat center center fixed;*/
-	background-color: #CCCCCC;
+    background-color: #dddddd;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+    margin-bottom: 60px;
 }
 
 h1,
@@ -36,13 +40,14 @@ hr {
     max-width: 400px;
     border-color: #999999;
 }
-.login{
-	float: right;
-}
 .title,
 .address-bar {
     display: none;
-	float: left;
+    float: left;
+}
+#title {
+    background:#333333;
+    width: 100%;
 }
 
 .navbar-title {
@@ -54,19 +59,13 @@ hr {
     font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 1.5em;
     line-height: normal;
-	color: #fff;
+    color: #fff;
 }
 
 .navbar-nav {
-	float: right;
     text-transform: uppercase;
     font-weight: 400;
-    letter-spacing: 3px;
-}
-
-
-.img-full {
-    min-width: 100%;
+    letter-spacing: 1px;
 }
 
 .title-name {
@@ -83,8 +82,8 @@ hr {
 .box {
     margin-bottom: 20px;
     padding: 30px 15px;
-    background: #fff;
-    background: rgba(255,255,255,0.9);
+    background:inherit;
+    min-height: 55vh;
 }
 
 .intro-text {
@@ -106,24 +105,20 @@ hr {
 }
 
 footer {
+    height: 60px;
     background: #fff;
     background: rgba(255,255,255,0.9);
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
 
 footer p {
     margin: 0;
-    padding: 20px 0;
+    padding: 10px 0;
 }
 
 @media screen and (min-width:768px) {
-	.login {
-		float: right;
-		padding-right: 30px;
-		padding-top: 30px;
-		text-transform: uppercase;
-		font-weight: 400;
-		letter-spacing: 1px;
-	}
     .title {
         display: inherit;
         margin: 0;
@@ -159,7 +154,7 @@ footer p {
     }
 
     .navbar-default {
-		width: 100%;
+        width: 100%;
         border: none;
         background: #fff;
         background: rgba(255,255,255,0.9);
@@ -170,6 +165,7 @@ footer p {
     }
 
     .navbar-nav>li>a {
+        color: #fff;
         line-height: normal;
     }
 
