--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -113,6 +113,7 @@ footer {
 footer p {
     margin: 0;
     padding: 10px 0;
+    margin-bottom: -15px;
     font-size: 1.2em;
     color: #555;
 }
